--- a/control.html
+++ b/control.html
@@ -131,7 +131,7 @@
         }
 
         .btn:hover {
-            background-color: #333;
+            background-color: royalblue;
         }
 
         .btn-control {
@@ -184,25 +184,25 @@
             <div class="control-box">
                 <div class="control-header">pH Acid</div>
                 <input type="number" id="pump1" placeholder="Enter ml" class="btn-control">
-                <button class="btn btn-control" onclick="controlPump('pump1')">Set</button>
+                <button class="btn btn-control" onclick="controlPump('pump1')">start</button>
             </div>
 
             <div class="control-box">
                 <div class="control-header">pH Base</div>
                 <input type="number" id="pump2" placeholder="Enter ml" class="btn-control">
-                <button class="btn btn-control" onclick="controlPump('pump2')">Set</button>
+                <button class="btn btn-control" onclick="controlPump('pump2')">start</button>
             </div>
 
             <div class="control-box">
                 <div class="control-header">Nutrient A</div>
                 <input type="number" id="pump3" placeholder="Enter ml" class="btn-control">
-                <button class="btn btn-control" onclick="controlPump('pump3')">Set</button>
+                <button class="btn btn-control" onclick="controlPump('pump3')">start</button>
             </div>
 
             <div class="control-box">
                 <div class="control-header">Nutrient B</div>
                 <input type="number" id="pump4" placeholder="Enter ml" class="btn-control">
-                <button class="btn btn-control" onclick="controlPump('pump4')">Set</button>
+                <button class="btn btn-control" onclick="controlPump('pump4')">start</button>
             </div>
         </div>
     </div>
