--- a/setup.html
+++ b/setup.html
@@ -119,7 +119,7 @@
         }
 
         .btn {
-            background-color: DodgerBlue;
+            background-color: #555;
             border: none;
             color: white;
             padding: 10px;
